docs-archive/apache-airflow-providers-snowflake/6.15.0/_sources/_api/airflow/providers/snowflake/hooks/snowflake_cortex_agent/index.rst.txt
airflow.providers.snowflake.hooks.snowflake_cortex_agent
========================================================

.. py:module:: airflow.providers.snowflake.hooks.snowflake_cortex_agent


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake_cortex_agent.SnowflakeCortexAgentHook


Module Contents
---------------

.. py:class:: SnowflakeCortexAgentHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.snowflake.hooks.snowflake.SnowflakeHook`


   Hook for interacting with Snowflake Cortex Agents.


   .. py:method:: run_agent(*, database, schema, agent_name, messages, thread_id = None, parent_message_id = None, tool_choice = None, models = None, instructions = None, orchestration = None, tools = None, tool_resources = None, timeout = 600)

      Execute a Snowflake Cortex Agent and return the response payload.

      :param database: Database containing the Cortex Agent.
      :param schema: Schema containing the Cortex Agent.
      :param agent_name: Name of the Cortex Agent to execute.
      :param messages: Conversation messages to send to the agent. For a new
          conversation, this should contain the conversation history and the
          current user message. When ``thread_id`` and ``parent_message_id``
          are provided, this should contain only the current user message.
      :param thread_id: Existing conversation thread identifier. Optional.
          When provided, ``parent_message_id`` must also be supplied.
          Defaults to ``None``.
      :param parent_message_id: Parent message identifier within the specified
          thread. Required when ``thread_id`` is provided. Defaults to ``None``.
      :param tool_choice: Tool selection configuration for the agent. Optional.
          Defaults to ``None``.
      :param models: Model configuration for the agent. Optional. Defaults to
          ``None``.
      :param instructions: Agent instruction overrides. Optional. Defaults to
          ``None``.
      :param orchestration: Orchestration configuration for the agent.
          Optional. Defaults to ``None``.
      :param tools: Additional tools available to the agent. Optional.
          Defaults to ``None``.
      :param tool_resources: Configuration for tools specified in ``tools``.
          Optional. Defaults to ``None``.
      :param timeout: Maximum time in seconds to wait for the Cortex Agent request
          to complete. Defaults to ``600``.
      :return: JSON response returned by the Cortex Agent.



   .. py:method:: get_text_response(response)
      :staticmethod:


      Extract text blocks from a Cortex Agent response.



