docs-archive/apache-airflow-providers-snowflake/6.18.0/_sources/_api/airflow/providers/snowflake/hooks/snowflake_cortex_agent/index.rst.txt
airflow.providers.snowflake.hooks.snowflake_cortex_agent
========================================================

.. py:module:: airflow.providers.snowflake.hooks.snowflake_cortex_agent


Attributes
----------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake_cortex_agent.JsonDict
   airflow.providers.snowflake.hooks.snowflake_cortex_agent.JsonList
   airflow.providers.snowflake.hooks.snowflake_cortex_agent.JsonResponse


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake_cortex_agent.SnowflakeCortexAgentHook


Module Contents
---------------

.. py:data:: JsonDict

.. py:data:: JsonList

.. py:data:: JsonResponse

.. py:class:: SnowflakeCortexAgentHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.snowflake.hooks.snowflake.SnowflakeHook`


   Hook for interacting with Snowflake Cortex Agents.


   .. py:method:: run_agent(*, database, schema, agent_name, messages, thread_id = None, parent_message_id = None, tool_choice = None, models = None, instructions = None, orchestration = None, tools = None, tool_resources = None, timeout = 600)

      Execute a Snowflake Cortex Agent and return the response payload.

      :param database: Database containing the Cortex Agent.
      :param schema: Schema containing the Cortex Agent.
      :param agent_name: Name of the Cortex Agent to execute.
      :param messages: Conversation messages to send to the agent. For a new
          conversation, this should contain the conversation history and the
          current user message. When ``thread_id`` and ``parent_message_id``
          are provided, this should contain only the current user message.
      :param thread_id: Existing conversation thread identifier. When provided,
          ``parent_message_id`` must also be supplied. Optional. Defaults to ``None``.
      :param parent_message_id: Parent message identifier within the specified
          thread. Required when ``thread_id`` is provided. Optional. Defaults to ``None``.
      :param tool_choice: Tool selection configuration for the agent. Optional.
          Defaults to ``None``.
      :param models: Model configuration for the agent. Optional. Defaults to
          ``None``.
      :param instructions: Agent instruction overrides. Optional. Defaults to
          ``None``.
      :param orchestration: Orchestration configuration for the agent.
          Optional. Defaults to ``None``.
      :param tools: Additional tools available to the agent. Optional.
          Defaults to ``None``.
      :param tool_resources: Configuration for tools specified in ``tools``.
          Optional. Defaults to ``None``.
      :param timeout: Maximum time in seconds to wait for the Cortex Agent request
          to complete. Optional. Defaults to ``600``.
      :return: JSON response returned by the Cortex Agent.



   .. py:method:: describe_agent(*, database, schema, agent_name, timeout = 600)

      Describe a Snowflake Cortex Agent.

      :param database: Database containing the Cortex Agent.
      :param schema: Schema containing the Cortex Agent.
      :param agent_name: Name of the Cortex Agent.
      :param timeout: Maximum time in seconds to wait for the Cortex Agent
          request to complete. Optional. Defaults to ``600``.
      :return: JSON description of the Cortex Agent.



   .. py:method:: list_agents(*, database, schema, like = None, from_name = None, show_limit = None, timeout = 600)

      List one page of Snowflake Cortex Agents.

      :param database: Database containing the Cortex Agents.
      :param schema: Schema containing the Cortex Agents.
      :param like: Case-insensitive name filter. Optional.
          Defaults to ``None``.
      :param from_name: Agent name from which to continue listing results. Pass the
          pagination value from the preceding page to retrieve the next page. Optional.
          Defaults to ``None``.
      :param show_limit: Maximum number of agents to include in this page. Optional.
          Defaults to ``None``.
      :param timeout: Maximum time in seconds to wait for the Cortex Agent
          request to complete. Optional. Defaults to ``600``.
      :return: One page of Cortex Agents.



   .. py:method:: delete_agent(*, database, schema, agent_name, if_exists = False, timeout = 600)

      Delete a Snowflake Cortex Agent.

      :param database: Database containing the Cortex Agent.
      :param schema: Schema containing the Cortex Agent.
      :param agent_name: Name of the Cortex Agent.
      :param if_exists: If ``True``, do not fail when the agent does not exist.
          Optional. Defaults to ``False``.
      :param timeout: Maximum time in seconds to wait for the Cortex Agent request
          to complete. Optional. Defaults to ``600``.
      :return: JSON response confirming deletion.



   .. py:method:: get_text_response(response)
      :staticmethod:


      Extract text blocks from a Cortex Agent response.



